fix text wrapping on header
fix the way text wraps on smaller screens in the header

--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,6 @@
 #header-container {
   width: 100%;
+  text-align: center;
 
   img {
     @media (max-width: 460px) {
